# mongodb-rust-gui

./: Cargo.toml  TODO  bootstrap.js  bootstrap.sh  mongod.conf
src/: main.rs
src/gui/: mod.rs
src/mongodriver/: mod.rs
